CLN: #HP-49 추가 시공비가 붙어야 하는 경우를 위한 응답값 추가
- laborFee