@@ -3,34 +3,44 @@ package kr.hoppang.adapter.inbound.chassis.webdto;
 import static kr.hoppang.adapter.common.exception.ErrorType.COMPANY_TYPE_IS_MANDATORY;
 import static kr.hoppang.adapter.common.exception.ErrorType.CHASSIS_TYPE_IS_MANDATORY;
 import static kr.hoppang.adapter.common.util.CheckUtil.check;
-import static kr.hoppang.util.calculator.ChassisPriceCalculator.calculateSurtax;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import jakarta.validation.constraints.NotNull;
 import java.util.ArrayList;
 import java.util.List;
-import kr.hoppang.application.command.chassis.commandresults.CalculateChassisPriceCommandHandlerCommandResult;
 import kr.hoppang.application.command.chassis.commands.CalculateChassisPriceCommand;
 import kr.hoppang.application.command.chassis.commands.CalculateChassisPriceCommand.CalculateChassisPrice;
 import kr.hoppang.domain.chassis.ChassisType;
 import kr.hoppang.domain.chassis.CompanyType;
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Getter;
 
 public class GetCalculatedChassisPriceWebDtoV1 {
 
-    public record Req(String zipCode,
-                      String state,
-                      String city,
-                      String town,
-                      String bCode,
-                      String remainAddress,
-                      String buildingNumber,
-                      boolean isApartment,
-                      boolean isExpanded,
-                      @NotNull
-                      List<ReqCalculateChassisPrice> reqCalculateChassisPriceList) {
+    public record Req(
+            String zipCode,
+
+            String state,
+
+            String city,
+
+            String town,
+
+            String bCode,
+
+            String remainAddress,
+
+            String buildingNumber,
+
+            boolean isApartment,
+
+            boolean isExpanded,
+
+            @NotNull
+            List<ReqCalculateChassisPrice> reqCalculateChassisPriceList
+    ) {
 
         public void validate() {
             this.reqCalculateChassisPriceList.forEach(ReqCalculateChassisPrice::checkIfNull);
@@ -39,13 +49,16 @@ public class GetCalculatedChassisPriceWebDtoV1 {
         public CalculateChassisPriceCommand toQuery(final Long userId) {
             List<CalculateChassisPrice> queryList = new ArrayList<>();
 
-            this.reqCalculateChassisPriceList.forEach(e -> {
-                queryList.add(new CalculateChassisPrice(
-                        e.chassisType,
-                        e.companyType,
-                        e.width,
-                        e.height
-                ));
+            this.reqCalculateChassisPriceList.forEach(
+                    e -> {
+                        queryList.add(
+                                new CalculateChassisPrice(
+                                        e.chassisType,
+                                        e.companyType,
+                                        e.width,
+                                        e.height
+                                )
+                        );
             });
 
             return new CalculateChassisPriceCommand(
@@ -59,23 +72,23 @@ public class GetCalculatedChassisPriceWebDtoV1 {
                     this.isApartment,
                     this.isExpanded,
                     queryList,
-                    reqCalculateChassisPriceList.get(0).floorCustomerLiving,
-                    reqCalculateChassisPriceList.get(0).isScheduledForDemolition,
-                    reqCalculateChassisPriceList.get(0).isResident,
+                    reqCalculateChassisPriceList.getFirst().floorCustomerLiving,
+                    reqCalculateChassisPriceList.getFirst().isScheduledForDemolition,
+                    reqCalculateChassisPriceList.getFirst().isResident,
                     userId
             );
         }
     }
 
     private static String forTestPeriodAddressZipCode(final String target) {
-        if (target == null || "".equals(target)) {
+        if (target == null || target.isEmpty()) {
             return "00000";
         }
         return target;
     }
 
     private static String forTestPeriodAddressInput(final String target) {
-        if (target == null || "".equals(target)) {
+        if (target == null || target.isEmpty()) {
             return "테스트 기간";
         }
         return target;
@@ -99,24 +112,40 @@ public class GetCalculatedChassisPriceWebDtoV1 {
     }
 
 
+    @Builder
     public record Res(
             long estimationId,
+
             String company,
-            List<ChassisPrice> chassisPriceResultList,
+
+            List<ChassisPriceResult> chassisPriceResultList,
+
             int deliveryFee,
+
             int demolitionFee,
+
             int maintenanceFee,
+
             int ladderFee,
+
             int freightTransportFee,
+
             int customerFloor,
+
+            int laborFee,
+
             int wholeCalculatedFee,
+
             int surtax,
+
             Integer discountedWholeCalculatedFeeAmount, // 할인 된 비용
+
             Integer discountedWholeCalculatedFeeWithSurtax // 할인 된 총 비용 discountedWholeCalculatedFee -> discountedWholeCalculatedFeeWithSurtax
     ) {
 
+        @Builder
         @JsonInclude(Include.NON_NULL)
-        private record ChassisPrice(
+        public record ChassisPriceResult(
                 String chassisType,
                 int width,
                 int height,
@@ -124,38 +153,5 @@ public class GetCalculatedChassisPriceWebDtoV1 {
                 Integer discountedRate,
                 Integer discountedPrice
         ) { }
-
-        public static Res of(final CalculateChassisPriceCommandHandlerCommandResult commandResult) {
-
-            List<ChassisPrice> chassisPriceResultList = new ArrayList<>();
-
-            commandResult.chassisPriceResultList()
-                    .forEach(e ->
-                            chassisPriceResultList.add(
-                                    new ChassisPrice(
-                                            e.getChassisType().name(),
-                                            e.getWidth(), e.getHeight(),
-                                            e.getPrice(),
-                                            e.getDiscountedRate(),
-                                            e.getDiscountedPrice()
-                                    )
-                            ));
-
-            return new Res(
-                    commandResult.estimationId(),
-                    commandResult.company(),
-                    chassisPriceResultList,
-                    commandResult.deliveryFee(),
-                    commandResult.demolitionFee(),
-                    commandResult.maintenanceFee(),
-                    commandResult.ladderFee(),
-                    commandResult.freightTransportFee(),
-                    commandResult.customerFloor(),
-                    commandResult.wholeCalculatedFee(),
-                    calculateSurtax(commandResult.wholeCalculatedFee()),
-                    commandResult.discountedWholeCalculatedFeeAmount(),
-                    commandResult.discountedWholeCalculatedFeeWithSurtax()
-            );
-        }
     }
 }
